// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should render correctly Header should render correctly with authorized user 1`] = `
<div>
  <header
    class="header"
  >
    <div
      class="container"
    >
      <div
        class="header__wrapper"
      >
        <div
          class="header__left"
        >
          <a
            class="header__logo-link "
            href="/"
          >
            <img
              alt="6 cities logo"
              class="header__logo"
              src="img/logo.svg"
              style="width: 81px; height: 41px;"
            />
          </a>
        </div>
        <nav
          class="header__nav"
        >
          <ul
            class="header__nav-list"
          >
            <li
              class="header__nav-item user"
            >
              <a
                class="header__nav-link header__nav-link--profile"
                href="/favorites"
              >
                <div
                  class="header__avatar-wrapper user__avatar-wrapper"
                  style="background-image: url(avatar.jpg); border-radius: 50%;"
                />
                <span
                  class="header__user-name user__name"
                >
                  jondoe@mail.com
                </span>
              </a>
            </li>
            <li
              class="header__nav-item user"
            >
              <a
                class="header__nav-link header__nav-link--profile"
                href="/"
                style="margin-left: 10px;"
              >
                <span
                  class="header__user-name user__name"
                >
                  Выход
                </span>
              </a>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </header>
</div>
`;

exports[`Header should render correctly Header should render correctly with unauthorized user 1`] = `
<div>
  <header
    class="header"
  >
    <div
      class="container"
    >
      <div
        class="header__wrapper"
      >
        <div
          class="header__left"
        >
          <a
            class="header__logo-link "
            href="/"
          >
            <img
              alt="6 cities logo"
              class="header__logo"
              src="img/logo.svg"
              style="width: 81px; height: 41px;"
            />
          </a>
        </div>
        <nav
          class="header__nav"
        >
          <ul
            class="header__nav-list"
          >
            <li
              class="header__nav-item user"
            >
              <a
                class="header__nav-link header__nav-link--profile"
                href="/login"
              >
                <div
                  class="header__avatar-wrapper user__avatar-wrapper"
                />
                <span
                  class="header__user-name user__name"
                >
                  Sign in
                </span>
              </a>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </header>
</div>
`;
